[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/Pawns/Pawn_17/Pawn_17_Body.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Pawns/Pawn_17/Pawn_17_Stinger.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Pawns/Pawn_17/Pawn_17_Rings_1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Pawns/Pawn_17/Pawn_17_Antenna.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Pawns/Pawn_17/Pawn_17_Eye_Back.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Pawns/Pawn_17/Pawn_17_Eye_Top.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Pawns/Pawn_17/Pawn_17_Part_Arm.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Pawns/Pawn_17/Pawn_17_Body_V2.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Pawns/Pawn_17/Pawn_17_Stinger_V2.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Pawns/Pawn_17/Pawn_17_Head_V2.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Pawns/Pawn_17/Pawn_17_Eye_Top_V2.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Pawns/Pawn_17/Pawn_17_Eye_Ball_V2.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Pawns/Pawn_17/Pawn_17_Part_Arm_V2.png" type="Texture" id=13]
[ext_resource path="res://Scripts/Pawns/Pawn_17_Parts/Pawn_17_Pic.gd" type="Script" id=14]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_17_Body_V2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -29 ), Vector2( 0, -27 ), Vector2( 0, -33 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_17_Body_V2/Pawn_17_Part_Arm_V2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.3, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 51.0, 34.0, 83.7 ]
}

[node name="Pawn_17" type="Node2D"]
script = ExtResource( 14 )

[node name="Pawn_17_Body" type="Sprite" parent="."]
visible = false
self_modulate = Color( 0.941176, 1, 0, 1 )
position = Vector2( 0, -30 )
texture = ExtResource( 1 )

[node name="Pawn_17_Stinger" type="Sprite" parent="Pawn_17_Body"]
self_modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 2 )

[node name="Pawn_17_Eye_Back" type="Sprite" parent="Pawn_17_Body"]
texture = ExtResource( 5 )

[node name="Pawn_17_Eye_Top" type="Sprite" parent="Pawn_17_Body/Pawn_17_Eye_Back"]
texture = ExtResource( 6 )

[node name="Pawn_17_Antenna" type="Sprite" parent="Pawn_17_Body"]
modulate = Color( 0.027451, 0, 1, 1 )
texture = ExtResource( 4 )

[node name="Pawn_17_Part_Arm" type="Sprite" parent="Pawn_17_Body"]
modulate = Color( 0.890196, 1, 0, 1 )
position = Vector2( 12, -2 )
texture = ExtResource( 7 )
hframes = 3
frame = 1

[node name="Pawn_17_Body_V2" type="Sprite" parent="."]
position = Vector2( 0, -29 )
texture = ExtResource( 8 )

[node name="Pawn_17_Head_V2" type="Sprite" parent="Pawn_17_Body_V2"]
show_behind_parent = true
position = Vector2( 0, -12 )
texture = ExtResource( 10 )

[node name="Pawn_17_Eye_Top_V2" type="Sprite" parent="Pawn_17_Body_V2/Pawn_17_Head_V2"]
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 6, -4 )
texture = ExtResource( 11 )

[node name="Pawn_17_Eye_Ball_V2" type="Sprite" parent="Pawn_17_Body_V2/Pawn_17_Head_V2/Pawn_17_Eye_Top_V2"]
texture = ExtResource( 12 )
hframes = 8
vframes = 2

[node name="Pawn_17_Part_Arm_V2" type="Sprite" parent="Pawn_17_Body_V2"]
position = Vector2( 0, 2 )
rotation = 0.890118
texture = ExtResource( 13 )
offset = Vector2( 12, 4 )
hframes = 3
frame = 2

[node name="Pawn_17_Stinger_V2" type="Sprite" parent="Pawn_17_Body_V2"]
modulate = Color( 0.278431, 0.278431, 0.278431, 1 )
show_behind_parent = true
position = Vector2( 0, 2 )
texture = ExtResource( 9 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Pawn_17_Body_V2"]
position = Vector2( 0, 18 )
amount = 1
lifetime = 0.25
texture = ExtResource( 3 )
direction = Vector2( 0, 1 )
spread = 2.0
initial_velocity = 30.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
